--- a/src/app/category-list/category-list.component.html
+++ b/src/app/category-list/category-list.component.html
@@ -10,7 +10,7 @@
   <a [routerLink]="['/']" class="button"><i class="fa fa-pills"></i>Physiology & Medicine</a>
 </div>
 
-<div *ngFor="let winner of winners">
+<!-- <div *ngFor="let winner of winners">
   <h3>
     <a [title]="winner.firstname + ' ' + winner.surname + ' details'"> {{ winner.firstname }} {{ winner.surname }}</a>
   </h3>
@@ -18,5 +18,5 @@
   <p *ngIf="winner.died"> Died: {{winner.died}}, {{winner.diedCountry}} </p>  
   <p> Gender: {{ winner.gender }} </p>
 
-</div>
+</div> -->
 
