--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -10,7 +10,7 @@
 <!-- Make request to search winners by a selected institution -->
 <!-- <a [routerLink]="['/institution']" class="button fancy-button"><i class="material-icons">account_balance</i>Institution</a> -->
 
-<a [routerLink]="['/institution']" class="button fancy-button"><i class="material-icons">map</i>Country</a>
+<a [routerLink]="['/country']" class="button fancy-button"><i class="material-icons">map</i>Country</a>
 
 <!-- 
 Copyright Google LLC. All Rights Reserved.
