--- a/src/app/country-list/country-list.component.html
+++ b/src/app/country-list/country-list.component.html
@@ -1,11 +1,8 @@
 <h2>Winners by Country</h2>
 
-<!-- Make API request and dynamically populate drop down -->
-<!-- Refine results based on selected country -->
+<!-- (Optional) Make API request and dynamically populate drop down -->
+<!-- Make API request to refine winner results based on selected country -->
 
-<select name="countries">
-  <option value="DE">Germany</option>
-  <option value="UK">UK</option>
-  <option value="US">USA</option>
-  <option value="FR">France</option>
+<select name="countries-list">
+  <option *ngFor="let country of countries" value="{{country.code}}">{{country.name}}</option>
 </select>
